--- a/setup.cfg
+++ b/setup.cfg
@@ -1,7 +1,8 @@
 [metadata]
 name = pspman
-version = 21.1.14
+version = 21.2.23
 description = Personal Simple Package Manager
+long_description = file: README.rst
 author = Pradyumna Paranjape
 author_email = pradyparanjpe@rediffmail.com
 url = https://github.com/pradyparanjpe/pspman
@@ -11,13 +12,14 @@ platforms =
 
 [options]
 packages = find:
-scripts = bin/pspman
+scripts=
 install_requires =
     psprint
+    argcomplete
 include_package_data = True
 python_requires =
     >=3.7
 
 [options.entry_points]
 console_scripts =
-    main = launcher_menus:check_installations
+    pspman = pspman:call
