--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = pspman
-version = 21.2.23
+version = 21.3.9
 description = Personal Simple Package Manager
 long_description = file: README.rst
 author = Pradyumna Paranjape
@@ -22,4 +22,4 @@ python_requires =
 
 [options.entry_points]
 console_scripts =
-    pspman = pspman.command_line:call
+    pspman = pspman.__main__:call
