corrected standard installation, configuration
.pspman/bin is standard install path (for pip too)

PATH exported with .pspman/bin
PYTHONPATH exported with addition of .pspman/lib.python...
$XDG_CONFIG_HOME/pspman/bashrrc exports the above

installation and uninstallation scripts modified

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,18 +1,18 @@
 [metadata]
 name = pspman
-version = 21.3.9
+version = 21.3.12
 description = Personal Simple Package Manager
 long_description = file: README.rst
 author = Pradyumna Paranjape
 author_email = pradyparanjpe@rediffmail.com
 url = https://github.com/pradyparanjpe/pspman
-license = GPLv3
+license = LGPLv3
 platforms =
     linux
 
 [options]
 packages = find:
-scripts=
+scripts =
 install_requires =
     psprint
     argcomplete
