--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,17 +1,14 @@
-include *.1
-include *.in
-include *.py
 include *.rst
-include *.sh
 include *.txt
 include *.yml
 include LICENSE
 recursive-include docs *.bat
-recursive-include docs *.html
-recursive-include docs *.org
 recursive-include docs *.py
 recursive-include docs *.rst
 recursive-include docs *.txt
+recursive-exclude docs _*/*
 recursive-include docs Makefile
+recursive-include install_scripts *.py
+recursive-include install_scripts *.sh
 recursive-include pspman *.yml
-recursive-exclude docs/_build *
+exclude pypi.sh
