--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = pspman
-version = 21.3.13
+version = 1!0.1.0
 description = Personal Simple Package Manager
 long_description = file: README.rst
 author = Pradyumna Paranjape
