Corrected: unnecessary line-breaks, documentation

--- a/pspman/.psprintrc.yml
+++ b/pspman/.psprintrc.yml
@@ -1,5 +1,5 @@
 #!/usr/bin/env python3
-# -*- coding:utf-8; mode:python -*-
+# -*- coding:utf-8; mode:yaml -*-
 #
 # Copyright 2020 Pradyumna Paranjape
 # This le is part of pspman.
