Bug fixed: fail_db, branch
branch: inferred from command line
.pspman.fail.yml is a registry for debugging, doesn't feed in.

--- a/pspman/.psprintrc.yml
+++ b/pspman/.psprintrc.yml
@@ -77,3 +77,10 @@ fclone:
   pref_color: 'lr'
   pref_bgcol: 'k'
   text_color: 'r'
+
+fail:
+  pref: '!FAIL'
+  pref_s: '!'
+  pref_color: 'lr'
+  pref_bgcol: 'k'
+  text_color: 'r'
