--- a/setup.cfg
+++ b/setup.cfg
@@ -19,6 +19,14 @@ install_requires =
 include_package_data = True
 python_requires =
     >=3.7
+classifiers=[
+'Topic :: System :: Shells',
+'License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)',
+'Programming Language :: Python',
+'Programming Language :: Python :: 3.7',
+'Programming Language :: Python :: 3.8',
+'Programming Language :: Python :: 3.9',
+]
 
 [options.entry_points]
 console_scripts =
