--- a/setup.cfg
+++ b/setup.cfg
@@ -9,6 +9,14 @@ url = https://github.com/pradyparanjpe/pspman
 license = LGPLv3
 platforms =
     linux
+classifiers=
+    Topic :: System :: Shells
+    License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)
+    Programming Language :: Python
+    Programming Language :: Python :: 3.7
+    Programming Language :: Python :: 3.8
+    Programming Language :: Python :: 3.9
+
 
 [options]
 packages = find:
@@ -19,14 +27,7 @@ install_requires =
 include_package_data = True
 python_requires =
     >=3.7
-classifiers=[
-'Topic :: System :: Shells',
-'License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)',
-'Programming Language :: Python',
-'Programming Language :: Python :: 3.7',
-'Programming Language :: Python :: 3.8',
-'Programming Language :: Python :: 3.9',
-]
+
 
 [options.entry_points]
 console_scripts =
