--- a/pspman/inst_config/config_make.yml
+++ b/pspman/inst_config/config_make.yml
@@ -1,5 +1,4 @@
-#!/usr/bin/env python3
-# -*- coding:utf-8; mode:python -*-
+# -*- coding:utf-8; mode:yaml -*-
 #
 # Copyright 2020 Pradyumna Paranjape
 # This le is part of pspman.
@@ -17,38 +16,18 @@
 # You should have received a copy of the GNU Lesser General Public License
 # along with pspman.  If not, see <https://www.gnu.org/licenses/>.
 #
-'''
-PSPMAN: **PS**\ eudo **P**\ ackage **Man**\ ager
 
-'''
-
-
-# Globally defined environment configuration
-from pathlib import Path
-from psprint import init_print
-from .classes import InstallEnv
-from .config import read_config
-
-
-print = init_print(Path(__file__).resolve()
-                   .parent.joinpath(".psprintrc.yml")).psprint
-'''
-Customized psprint function
-
-'''
-
-
-# ConfigBase
-CONFIG = read_config()
-'''
-Meta data information about C_DIR(s), configuration directory, etc
-'''
-
-# set configurations
-ENV = InstallEnv(CONFIG)
-'''
-Standard installation context
-'''
-
-
-__version__ = '1!1.2.0'
+indicate:
+- configure
+requires:
+- make
+- gcc
+env: {}
+install:
+- __code_path__/configure --prefix __prefix__ __argv__
+- make __include__ __library__ -C __code_path__
+- make __include__ __library__ -C __code_path__ install
+uninstall:
+- __code_path__/configure --prefix __prefix__ __argv__
+- make __include__ __library__ -C __code_path__
+- make __include__ __library__ -C __code_path__ uninstall
