--- a/pspman/inst_config/template.yml
+++ b/pspman/inst_config/template.yml
@@ -1,5 +1,4 @@
-#!/usr/bin/env python3
-# -*- coding:utf-8; mode:python -*-
+# -*- coding:utf-8; mode:yaml -*-
 #
 # Copyright 2020 Pradyumna Paranjape
 # This le is part of pspman.
@@ -17,38 +16,23 @@
 # You should have received a copy of the GNU Lesser General Public License
 # along with pspman.  If not, see <https://www.gnu.org/licenses/>.
 #
-'''
-PSPMAN: **PS**\ eudo **P**\ ackage **Man**\ ager
 
-'''
+# Variables:
+# code_path: path to source-code
+# prefix: install-prefix
+# build_dir: directory to build source for installation
+# library: include libraries -L
+# include: include libraries -I
+# argv: argv to be passed during installation
 
+# Sequence of commands called:
+# Installation: prepare, build, compile, install, whichever is defined
+# Uninstallation: prepare, build, compile, uninstall, whichever is defined
 
-# Globally defined environment configuration
-from pathlib import Path
-from psprint import init_print
-from .classes import InstallEnv
-from .config import read_config
-
-
-print = init_print(Path(__file__).resolve()
-                   .parent.joinpath(".psprintrc.yml")).psprint
-'''
-Customized psprint function
-
-'''
-
-
-# ConfigBase
-CONFIG = read_config()
-'''
-Meta data information about C_DIR(s), configuration directory, etc
-'''
-
-# set configurations
-ENV = InstallEnv(CONFIG)
-'''
-Standard installation context
-'''
-
-
-__version__ = '1!1.2.0'
+identifiers: []  # unique files found in $codepath that identify install-type
+commands: []  # Required commands
+env: {}  # env.key: value forms
+# build:
+# compile:
+# install:
+# uninstall:
