--- a/pspman/inst_config/make.yml
+++ b/pspman/inst_config/make.yml
@@ -1,7 +1,7 @@
 # -*- coding:utf-8; mode:yaml -*-
 #
 # Copyright 2020 Pradyumna Paranjape
-# This le is part of pspman.
+# This file is part of pspman.
 #
 # pspman is free software: you can redistribute it and/or modify
 # it under the terms of the GNU Lesser General Public License as published by
